<resources>
    <string name="app_name">Project</string>
    <string name="skip">Skip</string>
    <string name="intro1TitleText">Your Dream Job</string>
    <string name="intro2TitleText">Follow The Steps</string>
    <string name="intro3TitleText">Feedback</string>
    <string name="next">Next</string>
    <string name="intro1text">Start your career advancement journey with LitFair.</string>
    <string name="intro2text">Start your career advancement journey with LitFair.</string>
    <string name="intro3text">Start your career advancement journey with LitFair.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_welcome">Welcome back to LitFair!</string>
    <string name="login">Log In</string>
    <string name="sign_up"><u>sign up</u></string>
    <string name="log_in_underline"><u>log in</u></string>

    //file chooser
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat. Duis aute irure.</string>
</resources>