<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Intro.IntroScreen"
    >

    <TextView
        android:id="@+id/intro_skip_text_view"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="37dp"
        android:text="@string/skip"
        android:textColor="@color/text_main_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/intro_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro1pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:background="@drawable/round_corner_top"
        android:elevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/intro_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="250dp"
            android:text="@string/intro1TitleText"
            android:textColor="@color/blue_intro_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/intro_text_textView"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/intro1text"
            android:textColor="@color/intro_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_title_textView" />

        <Button
            android:id="@+id/intro_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="67dp"
            android:background="@drawable/round_corner_button"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"

            />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_next_button">

            <ImageView
                android:id="@+id/tab1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:srcCompat="@drawable/tab_indicator_selected"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="365dp" />

            <ImageView
                android:id="@+id/tab2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/tab_indicator_default"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="266dp" />

            <ImageView
                android:id="@+id/tab3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:srcCompat="@drawable/tab_indicator_default"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="286dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>